--- a/notebooks/food_com_datasets_analysis.ipynb
+++ b/notebooks/food_com_datasets_analysis.ipynb
@@ -2419,7 +2419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import joblib"
+    "#import joblib"
    ]
   },
   {
@@ -2440,7 +2440,7 @@
     }
    ],
    "source": [
-    "joblib.dump(pipeline, '../backend/recommend_recipes_pipeline.pkl')"
+    "#joblib.dump(pipeline, '../backend/recommend_recipes_pipeline.pkl')"
    ]
   },
   {
