Save the cleaned dataframe to csv file

--- a/notebooks/food_com_datasets_analysis.ipynb
+++ b/notebooks/food_com_datasets_analysis.ipynb
@@ -409,6 +409,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "1171259e-732a-4b2c-80f5-e2ec69355c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 4, 2, 0, 1, 3])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews['Rating'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "3de609eb-30f6-4f45-be27-0b4dda41ab70",
    "metadata": {
@@ -630,11 +651,11 @@
     {
      "data": {
       "text/plain": [
-       "205079    NaN\n",
-       "381535      4\n",
-       "475449    NaN\n",
-       "75396     NaN\n",
-       "444776    NaN\n",
+       "61960           NaN\n",
+       "470375          NaN\n",
+       "174166          NaN\n",
+       "40637       1/4 cup\n",
+       "386405    10 donuts\n",
        "Name: RecipeYield, dtype: object"
       ]
      },
@@ -656,11 +677,11 @@
     {
      "data": {
       "text/plain": [
-       "193081     2.0\n",
-       "244562     NaN\n",
-       "199489     6.0\n",
-       "256172     NaN\n",
-       "73600     10.0\n",
+       "192885    4.0\n",
+       "305528    6.0\n",
+       "143744    4.0\n",
+       "146575    4.0\n",
+       "459177    NaN\n",
        "Name: RecipeServings, dtype: float64"
       ]
      },
@@ -682,11 +703,11 @@
     {
      "data": {
       "text/plain": [
-       "358559   NaN\n",
-       "402814   NaN\n",
-       "313683   NaN\n",
-       "96767    NaN\n",
-       "242970   NaN\n",
+       "282511    4.5\n",
+       "110174    5.0\n",
+       "264211    4.0\n",
+       "198121    3.0\n",
+       "335587    NaN\n",
        "Name: AggregatedRating, dtype: float64"
       ]
      },
@@ -708,11 +729,11 @@
     {
      "data": {
       "text/plain": [
-       "105832    c(\"Apple\", \"Fruit\", \"Low Protein\", \"Low Choles...\n",
-       "370077     c(\"Dessert\", \"Low Protein\", \"< 60 Mins\", \"Easy\")\n",
-       "51633     c(\"Potato\", \"Poultry\", \"Vegetable\", \"Meat\", \"C...\n",
-       "227698                               c(\"< 60 Mins\", \"Easy\")\n",
-       "384437    c(\"Chicken\", \"Long Grain Rice\", \"Pork\", \"Poult...\n",
+       "471554    c(\"Spicy\", \"Weeknight\", \"Refrigerator\", \"Begin...\n",
+       "120179                            c(\"Healthy\", \"< 4 Hours\")\n",
+       "294218                   c(\"European\", \"< 60 Mins\", \"Easy\")\n",
+       "20000     c(\"Low Cholesterol\", \"Healthy\", \"Kid Friendly\"...\n",
+       "260864    c(\"Very Low Carbs\", \"Low Cholesterol\", \"Health...\n",
        "Name: Keywords, dtype: object"
       ]
      },
@@ -734,11 +755,11 @@
     {
      "data": {
       "text/plain": [
-       "467549    1.0\n",
-       "442667    NaN\n",
-       "349791    2.0\n",
-       "271300    1.0\n",
-       "84987     1.0\n",
+       "11542     5.0\n",
+       "366583    2.0\n",
+       "334760    NaN\n",
+       "31728     1.0\n",
+       "416656    NaN\n",
        "Name: ReviewCount, dtype: float64"
       ]
      },
@@ -1004,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "a10f223f-9d67-452d-9ccf-1aa6886fd0bf",
    "metadata": {},
    "outputs": [
@@ -1012,20 +1033,54 @@
      "data": {
       "text/plain": [
        "RecipeCategory\n",
-       "Breakfast       10704\n",
-       "Lunch/Snacks    19650\n",
-       "Vegetable       20174\n",
-       "dtype: int64"
+       "< 15 Mins           4370\n",
+       "< 30 Mins           5543\n",
+       "< 4 Hours           2314\n",
+       "< 60 Mins           5489\n",
+       "African              127\n",
+       "                    ... \n",
+       "Whole Turkey          33\n",
+       "Wild Game             97\n",
+       "Winter               145\n",
+       "Yam/Sweet Potato    1428\n",
+       "Yeast Breads        3192\n",
+       "Length: 289, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "categories = filtered_data.groupby('RecipeCategory').size()\n",
-    "categories.loc[['Breakfast', 'Lunch/Snacks', 'Vegetable']]"
+    "categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39d4c4f1-0421-468e-af0b-9458fee633c6",
+   "metadata": {},
+   "source": [
+    "### Saving the cleaned dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "44d8ba58-8dd8-4a6f-8936-1e81db600849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_data.to_csv('../data/cleaned_recipes.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42e4e63c-0bc6-4225-8fb8-182807bb0fa0",
+   "metadata": {},
+   "source": [
+    "- - -"
    ]
   },
   {
@@ -2038,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "116f9df1-d7bc-4616-aab9-5eda3cc9214f",
    "metadata": {},
    "outputs": [
@@ -2162,7 +2217,7 @@
        "9             0.8  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2174,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "2d3d0755-dca6-45bd-a6d5-6f5fd515a3b8",
    "metadata": {},
    "outputs": [
@@ -2394,7 +2449,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2413,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "4a133192-ab2b-482e-8d0c-58606e732ec9",
    "metadata": {},
    "outputs": [],
@@ -2423,21 +2478,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "id": "51376d48-6e6f-4632-9454-aea43397bc3b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../backend/recommend_recipes_pipeline.pkl']"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#joblib.dump(pipeline, '../backend/recommend_recipes_pipeline.pkl')"
    ]
@@ -2445,7 +2489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3ee2ef9-2ffc-4dbb-aacc-559f2075358c",
+   "id": "a6c09bf7-7b17-4758-856a-b8d42b38bafc",
    "metadata": {},
    "outputs": [],
    "source": []
